src/test/deca/context/valid/created/unary-minus-float.deca
//Description :
// Unary minus sur un float
//
// Resultats :
// 


{
    -2.0;
}
