src/test/deca/context/invalid/created/print_bool2.deca
//Description :
// Print bool
//
// Resultats :
// Erreur

{
print(false);
}
